internal/xds/translator/testdata/out/xds-ir/ratelimit-headers-and-cidr.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        prefix: /
      name: first-route
      route:
        cluster: first-route-dest
        rateLimits:
        - actions:
          - genericKey:
              descriptorKey: first-route
              descriptorValue: first-route
          - headerValueMatch:
              descriptorKey: rule-0-match-0
              descriptorValue: rule-0-match-0
              expectMatch: true
              headers:
              - name: x-user-id
                stringMatch:
                  exact: one
          - remoteAddressMatch:
              addressMatcher:
                ranges:
                - addressPrefix: 192.168.0.0
                  prefixLen: 16
              descriptorKey: masked_remote_address
              descriptorValue: 192.168.0.0/16
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        path: example
      name: second-route
      route:
        cluster: second-route-dest
        rateLimits:
        - actions:
          - genericKey:
              descriptorKey: second-route
              descriptorValue: second-route
          - requestHeaders:
              descriptorKey: rule-0-match-0
              headerName: x-user-id
          - requestHeaders:
              descriptorKey: rule-0-match-1
              headerName: foobar
          - remoteAddressMatch:
              addressMatcher:
                ranges:
                - addressPrefix: 192.168.0.0
                  prefixLen: 16
              descriptorKey: masked_remote_address
              descriptorValue: 192.168.0.0/16
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        prefix: /
      name: third-route
      route:
        cluster: third-route-dest
        rateLimits:
        - actions:
          - genericKey:
              descriptorKey: third-route
              descriptorValue: third-route
          - headerValueMatch:
              descriptorKey: rule-0-match-0
              descriptorValue: rule-0-match-0
              expectMatch: true
              headers:
              - name: x-user-id
                stringMatch:
                  exact: one
          - remoteAddressMatch:
              addressMatcher:
                ranges:
                - addressPrefix: 192.168.0.0
                  prefixLen: 16
              descriptorKey: masked_remote_address
              descriptorValue: 192.168.0.0/16
        - actions:
          - genericKey:
              descriptorKey: third-route
              descriptorValue: third-route
          - headerValueMatch:
              descriptorKey: rule-1-match-0
              descriptorValue: rule-1-match-0
              expectMatch: true
              headers:
              - name: x-user-id
                stringMatch:
                  exact: two
          - requestHeaders:
              descriptorKey: rule-1-match-1
              headerName: foobar
          - remoteAddressMatch:
              addressMatcher:
                ranges:
                - addressPrefix: 192.169.0.0
                  prefixLen: 16
              descriptorKey: masked_remote_address
              descriptorValue: 192.169.0.0/16
        upgradeConfigs:
        - upgradeType: websocket
